add profile doc swagger
